--- a/styles/NavBar.module.css
+++ b/styles/NavBar.module.css
@@ -55,7 +55,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1000px) {
   .container {
     padding: 1rem 1rem;
   }
